// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic conditional rendering with the prop flag 1`] = `
<div
  className=""
>
  hi
</div>
`;

exports[`Basic conditional rendering without the prop flag 1`] = `null`;

exports[`Div with a conditional class gets a single extra class with the prop flag 1`] = `
<div
  className="thing thing--big"
/>
`;

exports[`Div with a conditional class gets two extra classes without the prop flag 1`] = `
<div
  className="thing thing--small small"
/>
`;

exports[`Div with class 1`] = `
<div
  className="some-class"
/>
`;

exports[`Div with multiple classes 1`] = `
<div
  className="some-class another-class"
/>
`;
